# OCS-wamr-escape

./: .gitignore  .gitmodules  CMakeLists.txt  config.json  exploit.aot  exploit.asm  exploit.c  exploit.patched.aot  patch_aot.py  shared.h
exploit/: exploit.c  exploit_simple.c
src/: main.c  native_symbols.h
